updated Landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -29,19 +29,21 @@
                 <span class="topline">HI</span>
                 <h1>I'm... <span class="multiText">Front-End</span></h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus iste, vero id consectetur accusamus aspernatur ipsam.</p>
-            <div class="btns">
-                <button>Download CV</button>
-                <button>Hire Me</button>
+                <div class="btns">
+                    <button>Download CV</button>
+                    <button>Hire Me</button>
+                </div>
             </div>
+            <div class="cols cols1">
+                <div class="imgbox">
+                    <img src="assets/img/brushS.png" id="splash"></img>
+                    <img src="assets/img/me.png" id="splash"></img>
+                </div>
             </div>
-            <div class="cols cols1"></div>
         </div>
-        <div class="imgbox">
-            <img src="" id="splash"></img>
-            <img src="" id="splash"></img>
-        </div>
+       
 
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-        <script src="func.js"></script>
+        <script src="assets/js/func.js"></script>
 </body>
 </html>
