--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
         </nav>
     </div>
 
-        <div class="wrapper">
-            <div class="cols cols0">
-                <span class="topline">HI</span>
-                <h1>I'm... <span class="multiText">Front-End</span></h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus iste, vero id consectetur accusamus aspernatur ipsam.</p>
-                <div class="btns">
-                    <button>Download CV</button>
-                    <button>Hire Me</button>
-                </div>
-            </div>
-            <div class="cols cols1">
-                <div class="imgbox">
-                    <img src="assets/img/brushS.png" id="splash"></img>
-                    <img src="assets/img/me.png" id="splash"></img>
-                </div>
+    <div class="wrapper">
+        <div class="cols cols0">
+            <span class="topline">HI</span>
+            <h1>I'm... Faisal A. Job<span class="multiText">Analytics Data</span></h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus iste, vero id consectetur accusamus aspernatur ipsam.</p>
+            <div class="btns">
+                <button>Download CV</button>
+                <button>Hire Me</button>
             </div>
         </div>
+        <div class="cols cols1">
+            <div class="imgbox">
+                <img src="./assets/img/brushS.png" class="splash"> <!-- Ganti ID ke class -->
+                <img src="./assets/img/me.png" class="splash"> <!-- Ganti ID ke class -->
+            </div>
+        </div>
+    </div>
+    
        
 
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
