--- a/pages/crud-blog.html
+++ b/pages/crud-blog.html
@@ -32,7 +32,6 @@
             <input type="text" id="title" placeholder="Blog Title" required>
             <textarea id="content" placeholder="Blog Content" required></textarea>
             <button type="submit">Create Blog Post</button>
-            <button type="back">Back to Home</button>
         </form>
     </div>
 
@@ -42,6 +41,6 @@
         <div id="blogList"></div>
     </div>
 
-    <script src="assets/js/crud.js"></script>
+    <script src="assets/js/blog.js"></script>
 </body>
 </html>
