--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -12,10 +12,10 @@
         <nav>
             <div class="logo">Portofolio<b>.</b></div>
             <ul class="navItems">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Project</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./index.html"class="active">Home</a></li>
+                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="./pages/project.html">Project</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
             </ul>
             <div class="links">
                 <a href=""><i class="fab fa-linkedin"></i></a>
@@ -36,8 +36,8 @@
         </div>
         <div class="cols cols1">
             <div class="imgbox">
-                <img src="./assets/img/brushS.png" class="splash"> <!-- Ganti ID ke class -->
-                <img src="./assets/img/me.png" class="splash"> <!-- Ganti ID ke class -->
+                <img src="/assets/img/brushS.png" class="splash">
+                <img src="/assets/img/me.png" class="splash"> 
             </div>
         </div>
     </div>
