created button back

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,6 +28,9 @@
     <!-- Blog Form to Add Posts -->
     <div class="blog-form-wrapper">
         <h2>Create a New Blog Post</h2>
+        <a href="../index.html">
+            <button type="button" class="back-button">Back to Home</button>
+        </a>
         <form id="blogForm">
             <input type="text" id="title" placeholder="Blog Title" required>
             <textarea id="content" placeholder="Blog Content" required></textarea>
