--- a/pages/about.html
+++ b/pages/about.html
@@ -13,9 +13,9 @@
             <div class="logo">Portofolio<b>.</b></div>
             <ul class="navItems">
                 <li><a href="./index.html"class="active">Home</a></li>
-                <li><a href="./pages/about.html">About</a></li>
-                <li><a href="./pages/project.html">Project</a></li>
-                <li><a href="./pages/blog.html">Blog</a></li>
+                <li><a href="../pages/about.html">About</a></li>
+                <li><a href="../pages/project.html">Project</a></li>
+                <li><a href="../pages/blog.html">Blog</a></li>
             </ul>
             <div class="links">
                 <a href=""><i class="fab fa-linkedin"></i></a>
