--- a/pages/project.html
+++ b/pages/project.html
@@ -12,10 +12,10 @@
         <nav>
             <div class="logo">Portofolio<b>.</b></div>
             <ul class="navItems">
-                <li><a href="./index.html"class="active">Home</a></li>
-                <li><a href="./pages/about.html">About</a></li>
-                <li><a href="./pages/project.html">Project</a></li>
-                <li><a href="./pages/blog.html">Blog</a></li>
+                <li><a href="../index.html"class="active">Home</a></li>
+                <li><a href="../pages/about.html">About</a></li>
+                <li><a href="../pages/project.html">Project</a></li>
+                <li><a href="../pages/blog.html">Blog</a></li>
             </ul>
             <div class="links">
                 <a href=""><i class="fab fa-linkedin"></i></a>
